<resources>
    <string name="app_name">ShamsahaApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="talk_now">talk / chat now</string>
    <string name="english">english</string>
    <string name="arbic">أربيك</string>
    <string name="chat">chat</string>
    <string name="internet_call">internet call</string>
    <string name="celluler_call">cellular call</string>
    <string name="get_in_touch">get in touch.</string>
    <string name="contact_welcome_text">thank you for your interest in Shamsaha and out work in empowering women and girls.</string>
    <string name="name">full name</string>
    <string name="full_name">full Name</string>
    <string name="mobile">mobile</string>
    <string name="email">email</string>
    <string name="message">message</string>
    <string name="i_have_read">I have read and accept privacy policy.</string>
    <string name="send">send</string>
    <string name="contact">contact</string>
    <string name="photo">photos</string>
    <string name="articles">articles</string>
    <string name="about_shamsaha">About Shamsaha</string>
    <string name="get_involved">get involved</string>
    <string name="get_involved2">Get Involved</string>
    <string name="event_media"> media</string>
    <string name="event_media2"> Media</string>
    <string name="event">events</string>
    <string name="event2">Event</string>
    <string name="contact_us">contact us</string>
    <string name="contact_us2">Contact Us</string>
    <string name="lock_app">lock app</string>
    <string name="lock_app2">Lock App</string>
    <string name="terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="per_country">per country</string>
    <string name="servival_suppoer_tool">survivor support tools</string>
    <string name="raw_data_homepage">"Advocating for women's \n empowerment and protection \n throughout the Middle East. "</string>
    <string name="how_we_have_help">How we have helped?</string>
    <string name="how_we_have_help_2">For the thousands of stifled women in low-income communities across the country, Srujna is the key to unlocking their power! Srujna touches their lives.</string>
    <string name="learn_more">learn more</string>
    <string name="did_you_know">did you know?</string>
    <string name="women_em">"Women empowered annually by Shamsaha."</string>
    <string name="of_women">of women will experience abuse in their lifetime.</string>
    <string name="trillion_lost">trillion lost annually due to abuse and descrimination.</string>
    <string name="who_we_are">who we are</string>
    <string name="shamsaha_vision_is">shamsaha\'s vision is</string>
    <string name="to_empower">to empower women to thrive</string>
    <string name="we_believe_with">We believe in acting with</string>
    <string name="conviction_compossion">conviction + compassion</string>
    <string name="advisory_board">advisory board</string>
    <string name="personal_details">Personal Details</string>
    <string name="create_pin">Create Pin</string>
    <string name="submit">submit</string>
    <string name="enter_four_digit">enter 4 digit PIN number</string>
    <string name="reenter_pin">re-enter your PIN number</string>
    <string name="resources">resources</string>
    <string name="volunteer_login">volunteer login</string>
    <string name="amplify_your">amplify your potential</string>
    <string name="petential">potential</string>
    <string name="password">password</string>
    <string name="remember_me">remember me</string>
    <string name="forget_password">forgot password?</string>
    <string name="login">login</string>
    <string name="or_login_with">or login with</string>
    <string name="new_user">New user? Register here</string>
    <string name="raw_data">What is women empowerment? Women empowerment can be defined to promoting women sense of self-worth, their ability to determine their own choices, and their right to influence social change for themselves.</string>
    <string name="sponser_now">sponsor now</string>
    <string name="select_resources">select resources</string>
    <string name="please_enter_name">please enter name</string>
    <string name="please_enter_phone">please enter phone number</string>
    <string name="please_enter_valid_phone">please enter valid phone number</string>
    <string name="please_enter_email">please enter email</string>
    <string name="please_enter_valid_email">please enter valid email address</string>
    <string name="please_enter_message">please enter message</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="something_went_wrong">something went wrong. Please try again.</string>
    <string name="something_went_wrong_please_check">something went wrong.Please check your phone number and try again.</string>
    <string name="please_check_privacy_pocily">please check privacy policy.</string>
    <string name="please_enter_password">please enter password.</string>
    <string name="please_enter_minimum_eight_digit_password">password length must be at leaset eight digit.</string>
    <string name="volunteer">volunteer</string>
    <string name="publicstring">public</string>
    <string name="existing_user">existing user?</string>
    <string name="request_otp">request OTP</string>
    <string name="skip">skip</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number2">mobile number</string>
    <string name="enter_otp">enter OTP</string>
    <string name="dialog_background_location_rationale_title">dgfadsg</string>
    <string name="dialog_background_location_rationale_description">fgsdfgsdfg</string>
    <string name="yes">yes</string>
    <string name="otp_verificaiton_successful">OTP Verification Successful.</string>
    <string name="please_enter_valid_otp">please enter valid OTP</string>
    <string name="please_enter_otp">please enter OTP</string>
    <string name="wrong_otp_please_try_agin">wrong OTP, Please try again.</string>
    <string name="submit_otp">submit OTP</string>
    <string name="dashboard">dashboard</string>
    <string name="announcement">anoucement(s)</string>
    <string name="chats">chat(s)</string>
    <string name="cases">case(s)</string>
    <string name="incoming_chats">incoming chat(s)</string>
    <string name="past_chats">past chat(s)</string>
    <string name="case_reports">case report(s)</string>
    <string name="please_enter_pin">Pleae enter pin</string>
    <string name="please_re_enter_email">Please re-enter pin</string>
</resources>