<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/alert_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/close_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintHeight_percent="0.1"
        android:src="@drawable/popup_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.AppCompatImageView>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sl487"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_icon"
        android:text="@string/please_enter_phone"
        android:textSize="@dimen/text_heading_ultra_18sp"
        android:fontFamily="@font/avenir_heavy"
        android:textStyle="bold"
        ></androidx.appcompat.widget.AppCompatTextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mobile_layout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintHeight_percent="0.1"

       app:layout_constraintStart_toStartOf="@+id/sl487"
        app:layout_constraintEnd_toEndOf="@+id/sl487"
        app:layout_constraintTop_toBottomOf="@+id/sl487"
        app:layout_constraintWidth_percent="0.9">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sl489594"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/call_f"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
           ></androidx.appcompat.widget.AppCompatImageView>


        <View
            android:id="@+id/sl934893"
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:background="@color/dark_white"
            app:layout_constraintStart_toEndOf="@+id/sl489594"
            app:layout_constraintTop_toTopOf="parent"></View>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phoneVictimEdittext"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:fontFamily="@font/avenir_heavy"
            android:hint="@string/mobile_number2"
            android:inputType="number"
            android:maxLength="15"
            android:textColorHint="@color/dark_white"

            app:layout_constraintStart_toEndOf="@+id/sl934893"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.875"


            ></androidx.appcompat.widget.AppCompatEditText>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:backgroundTint="@color/dark_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"></View>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="20dp"
        android:id="@+id/request_otp_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAllCaps="false"

        android:textSize="@dimen/text_heading_ultra_18sp"
        android:background="@drawable/custom_yellow_button_4do_radious"
        android:fontFamily="@font/avenir_heavy"
        android:text="@string/request_otp"
        app:layout_constraintStart_toStartOf="@+id/mobile_layout"
        app:layout_constraintEnd_toEndOf="@+id/mobile_layout"
        app:layout_constraintTop_toBottomOf="@+id/mobile_layout"
        ></androidx.appcompat.widget.AppCompatButton>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@+id/request_otp_button"
        app:layout_constraintStart_toStartOf="@+id/request_otp_button"
        app:layout_constraintEnd_toEndOf="@+id/request_otp_button"
        ></View>

</androidx.constraintlayout.widget.ConstraintLayout>


